# study

./: .editorconfig  .gitignore  words.md
.github/workflows/: README.md
algorithm/: README.md
algorithm/DFS/: README.md  dfs.py
algorithm/エラトステネスの篩/: README.md  main.py
algorithm/フェニック木/: FenwickTree.py  README.md  test_FenwickTree.py
algorithm/ユークリッドの互除法/: README.md  main.py
book/: (2021-04-24) ISBN9784048930796.md  (2021-04-24) ISBN9784873117119.md  (2021-04-27) ISBN9784479307099.md  (2021-05-23) ISBN9784822289508.md  .gitignore  ISBN9784048930796.md  ISBN9784479307099.md  ISBN9784492555552.md  ISBN9784764905832.md  ISBN9784873117119.md  ISBN9784894515802.md  README.md  [2020.04.20-]ISBN9784297111175.ipynb
book/ISBN9784627817616/: Part1-1.ipynb  Part1-2.ipynb
cloud-computing/aws/: s3.md
cloud-computing/gcp/: CloudFunctions.md  CloudStorage.md
decision-theory/: README.md  [2020.04.05]st-petersburg-paradox.ipynb
natural-language-processing/: .gitignore  README.md  [2020.04.08-]NLP100(2015).ipynb  [2020.04.08-]NLP100(2020).ipynb
operating-system/Linux/: dir.md
platform/: GitHub.md
probability-theory/: README.md  [2020.04.06]monty-hall-problem.ipynb  [2020.09.05]comparison-of-different-sample-sizes.ipynb
programming-language/Haskell/: README.md
programming-language/JavaScript/: README.md
programming-language/python/: .gitignore
programming-language/python/sklearn/AdaBoostClassifier/: AdaBoostClassifier.ipynb  pyproject.toml
programming-language/ruby/: README.md
programming-language/rust/: README.md
statistics/: PCA.ipynb
(+14 files in other folders)
